# autocheck

./: .env.example  .gitignore  AGENTS.md  CITATION_IMPROVEMENT.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  demo_citation_improvement.py  pyproject.toml  testpaper.md
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
src/autocheck/: __init__.py  __main__.py
src/autocheck/cli/: main.py
src/autocheck/config/: settings.py
src/autocheck/extractors/: __init__.py  document_extractor.py
src/autocheck/llm/: __init__.py  factory.py
src/autocheck/pipeline/: orchestrator.py  verifier.py
src/autocheck/prompts/: __init__.py  templates.py
src/autocheck/repository/: __init__.py  library.py
src/autocheck/resolvers/: __init__.py  arxiv.py  crossref.py  openalex.py  scihub.py  scihub_common.py  title_downloader.py
src/autocheck/schemas/: models.py
src/autocheck/services/: document_loader.py  evidence_retriever.py  reference_manager.py  report_writer.py  source_resolver.py
src/autocheck/utils/: citations.py  text.py
src/autocheck/web/: __init__.py  app.py  configuration.py
src/autocheck/web/static/: config.html  index.html
src/autocheck/web/static/assets/: app.js  styles.css
tests/: check_title_downloads.py  test_citation_filtering.py  test_cli.py  test_document_loader.py  test_llm_factory.py  test_pipeline_smoke.py  test_source_resolver.py  test_title_downloader.py  test_title_downloader_integration.py  test_web.py
tests/fixtures/: sample_draft.txt
